--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
